--- a/trainning1/index.html
+++ b/trainning1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,13 @@
     <title>Document</title>
 
     <!-- Link item -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Link css -->
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="header-main">
         <div class="logo-main">
@@ -42,7 +46,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-user"></i>
             <i class="fa-solid fa-bag-shopping"></i>
-            
+
         </div>
     </div>
     <div class="home-slider">
@@ -57,31 +61,36 @@
         <div class="banner-section">
             <div class="banner-section-content">
                 <a href="https://hg-pet.myharavan.com/">
-                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_1.jpg?v=763" alt="banner">
+                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_1.jpg?v=763"
+                        alt="banner">
                 </a>
                 <h3>Thức ăn cho chó</h3>
             </div>
             <div class="banner-section-content">
                 <a href="https://hg-pet.myharavan.com/">
-                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_2.jpg?v=763" alt="banner">
+                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_2.jpg?v=763"
+                        alt="banner">
                 </a>
                 <h3>Thức ăn cho mèo</h3>
             </div>
             <div class="banner-section-content">
                 <a href="https://hg-pet.myharavan.com/">
-                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_3.jpg?v=763" alt="banner">
+                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_3.jpg?v=763"
+                        alt="banner">
                 </a>
                 <h3>Đồ chơi cho chó</h3>
             </div>
             <div class="banner-section-content">
                 <a href="https://hg-pet.myharavan.com/">
-                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_4.jpg?v=763" alt="banner">
+                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_4.jpg?v=763"
+                        alt="banner">
                 </a>
                 <h3>Đồ chơi cho mèo</h3>
             </div>
             <div class="banner-section-content">
                 <a href="https://hg-pet.myharavan.com/">
-                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_5.jpg?v=763" alt="banner">
+                    <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner_image_5.jpg?v=763"
+                        alt="banner">
                 </a>
                 <h3>Thực phẩm bổ sung</h3>
             </div>
@@ -93,11 +102,11 @@
                 <img src="//theme.hstatic.net/200000463473/1000816547/14/home_banner2_image_1.jpg?v=763" alt="banner">
             </a>
             <div class="wrap">
-            <p>DỊCH VỤ</p>
-            <h3>Làm đẹp thú cưng</h3>
-            <a href="//theme.hstatic.net/200000463473/1000816547/14/home_banner2_image_1.jpg?v=763">
-                <button>Tìm hiểu ngay</button>
-            </a>
+                <p>DỊCH VỤ</p>
+                <h3>Làm đẹp thú cưng</h3>
+                <a href="//theme.hstatic.net/200000463473/1000816547/14/home_banner2_image_1.jpg?v=763">
+                    <button>Tìm hiểu ngay</button>
+                </a>
             </div>
         </div>
         <div class="banner-section-2">
@@ -110,7 +119,7 @@
                 <a href="//theme.hstatic.net/200000463473/1000816547/14/home_banner2_image_1.jpg?v=763">
                     <button>Đăng ký</button>
                 </a>
-                </div>
+            </div>
         </div>
         <div class="banner-section-2">
             <a href="https://hg-pet.myharavan.com/">
@@ -122,9 +131,140 @@
                 <a href="//theme.hstatic.net/200000463473/1000816547/14/home_banner2_image_1.jpg?v=763">
                     <button>Mua ngay</button>
                 </a>
-                </div>
+            </div>
         </div>
     </div>
-    <div class="home-product-section"></div>
+    <div class="home-product-section">
+        <h2 class="section-title"><span>Sản phẩm</span> bán chạy</h2>
+        <div class="product-section">
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/1b3c7d4c61e27919b58b60de85761909_f32574e4182b4df5a83745ae7f72d9fa_grande.jpg"
+                            alt=" Bát ăn Inox cho Chó Mèo hình hoa UMIPET ">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">Bát ăn
+                            Inox cho Chó Mèo hình hoa UMIPET</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>105.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/d869a0f38220ecae6505dadac4ee9b2e_17777fb77d634bb5a7b99d59dfc601ba_grande.jpg"
+                            alt=" Bộ 3 túi bánh thưởng cho mèo Temptations: vị cá ngừ, hải sản và gà 85g/túi ">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Bộ
+                            3 túi bánh thưởng cho mèo Temptations</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>147.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/65fc97e40e06f8a74a7145397b9d7ea4_4350e647de94490b8e6f5c0fc39b6854_grande.jpg"
+                            alt=" Bộ 3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Bộ
+                            3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>52.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/09f8bb6863839bea7a288d2d252aa300_d9696182ff2a48f3976029ced6ad0a47_grande.jpg"
+                            alt=" Bộ 3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Dây
+                            đeo cổ vải dù nhiều màu có họa tiết dấu chân thú cưng đáng yêu</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>12.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/1b3c7d4c61e27919b58b60de85761909_f32574e4182b4df5a83745ae7f72d9fa_grande.jpg"
+                            alt=" Bát ăn Inox cho Chó Mèo hình hoa UMIPET ">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">Bát ăn
+                            Inox cho Chó Mèo hình hoa UMIPET</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>105.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/d869a0f38220ecae6505dadac4ee9b2e_17777fb77d634bb5a7b99d59dfc601ba_grande.jpg"
+                            alt=" Bộ 3 túi bánh thưởng cho mèo Temptations: vị cá ngừ, hải sản và gà 85g/túi ">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Bộ
+                            3 túi bánh thưởng cho mèo Temptations</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>147.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/65fc97e40e06f8a74a7145397b9d7ea4_4350e647de94490b8e6f5c0fc39b6854_grande.jpg"
+                            alt=" Bộ 3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Bộ
+                            3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>52.000 đ</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-img">
+                    <a href="https://hg-pet.myharavan.com/products/bat-an-inox-cho-cho-meo-hinh-hoa-umipet">
+                        <img src="//product.hstatic.net/200000463473/product/09f8bb6863839bea7a288d2d252aa300_d9696182ff2a48f3976029ced6ad0a47_grande.jpg"
+                            alt=" Bộ 3 túi thức ăn cho chó lớn dạng sốt Pedigree vị gan và rau 130g">
+                    </a>
+                </div>
+                <div class="product-name">
+                    <h3><a
+                            href="https://hg-pet.myharavan.com/products/bo-3-tui-banh-thuong-cho-meo-temptations-vi-ca-ngu-hai-san-va-ga-85g-tui">Dây
+                            đeo cổ vải dù nhiều màu có họa tiết dấu chân thú cưng đáng yêu</a></h3>
+                </div>
+                <div class="product-price">
+                    <p>12.000 đ</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
